# Permissions

./: .gitignore  Cargo.toml  Dockerfile  README.md
frontend/: package.json
frontend/public/: index.html
frontend/src/: index.js
src/: main.rs
src/api/: group.rs  user.rs
