[package]
name = "permissions"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.1"
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["diesel_sqlite_pool"] }
diesel = { version = "2.1.1", features = ["sqlite"] }  
jsonwebtoken = "7.0.1"
ldap3 = "0.7.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rusqlite = "0.26.0"